--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: url('https://i.ibb.co/7d09sF1T/IMG-5554.jpg') no-repeat center center fixed;
+            background: url('https://i.ibb.co/7d09sF1T/IMG-5554.jpg');
             background-size: cover;
             color: white;
             margin: 0;
