--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: url('https://i.ibb.co/7d09sF1T/IMG-5554.jpg');
+            background: url('https://i.ibb.co/7d09sF1T/IMG-5554.jpg') no-repeat center center fixed;
+            background-size: 100% 100%;
             background-size: cover;
             color: white;
             margin: 0;
@@ -57,3 +58,4 @@
     </div>
 </body>
 </html>
+
